--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -107,7 +107,7 @@
                     </button>
                 </div>
                 <div class="row">
-                    <mat-checkbox [(ngModel)]="snapToGrid" style="flex:1">Snap to Grid</mat-checkbox>
+                    <mat-checkbox [(ngModel)]="snapToGrid" style="flex:1">Привязка к сетке</mat-checkbox>
                     <div class="input-block" style="flex:1"
                         matTooltip="Number of decimals to keep when a point is dragged"
                         matTooltipPosition="right"
